Segmentation fault when setting D.scenes[0].sequence_editor.proxy_storage with a second scene selected having no sequence editor #78999

Closed
opened 2020-07-16 18:41:14 +02:00 by Laurent Noel · 8 comments

System Information
Operating system: Windows 10
Graphics card: GTX 1060

Blender Version
Broken: 2.83.1, 2.83.2, 2.90

Short description of error

When I create a new scene and try to set the proxy_storage property of the first scene in the console (or a script/addon) with:

D.scenes[0].sequence_editor.proxy_storage = "PER_STRIP"

I get a Segmentation fault. I tried running with "--debug-all" option but no more clue from it (and I did not have time to investigate further with a debug build of blender).

Exact steps for others to reproduce the error

  • Start Blender (I tested on clean blenders, with default config)
  • Create a new scene in the GUI (it will be created and selected in the top bar)
  • Input D.scenes- [x].sequence_editor.proxy_storage = "PER_STRIP" in a Python console area and press enter
  • Segfault

Now, if you select the first scene before running the line of code, no more crash. If you select again the second scene and enter the line of code, crash.

If you managed to have a sequence_editor created for the second scene (I did it by adding a Text effect strip inside, it seems to trigger the creation of the sequence_editor), then the line of code works and produces no more crash. (but then if you create a third scene and reproduce, then you got a crash again).

**System Information** Operating system: Windows 10 Graphics card: GTX 1060 **Blender Version** Broken: 2.83.1, 2.83.2, 2.90 **Short description of error** When I create a new scene and try to set the `proxy_storage` property of the first scene in the console (or a script/addon) with: ``` D.scenes[0].sequence_editor.proxy_storage = "PER_STRIP" ``` I get a Segmentation fault. I tried running with "--debug-all" option but no more clue from it (and I did not have time to investigate further with a debug build of blender). **Exact steps for others to reproduce the error** - Start Blender (I tested on clean blenders, with default config) - Create a new scene in the GUI (it will be created and selected in the top bar) - Input `D.scenes- [x].sequence_editor.proxy_storage = "PER_STRIP"` in a Python console area and press enter - Segfault Now, if you select the first scene before running the line of code, no more crash. If you select again the second scene and enter the line of code, crash. If you managed to have a sequence_editor created for the second scene (I did it by adding a Text effect strip inside, it seems to trigger the creation of the sequence_editor), then the line of code works and produces no more crash. (but then if you create a third scene and reproduce, then you got a crash again).

Added subscriber: @c2ba

Added subscriber: @c2ba

It also happen for the proxy_dir property.

It also happen for the `proxy_dir` property.

Added subscriber: @rjg

Added subscriber: @rjg

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

In rna_SequenceEditor_update_cache the scene->ed is NULL, but is dereferenced when calling BKE_sequencer_free_imbuf(scene, &ed->seqbase, false);

BKE_sequencer_free_imbuf(Scene * scene, ListBase * seqbase, bool for_render) Line 4307	C
rna_SequenceEditor_update_cache(Main * UNUSED_bmain, Scene * scene, PointerRNA * UNUSED_ptr) Line 205	C
rna_property_update(bContext * C, Main * bmain, Scene * scene, PointerRNA * ptr, PropertyRNA * prop) Line 2286	C
RNA_property_update(bContext * C, PointerRNA * ptr, PropertyRNA * prop) Line 2346	C
pyrna_py_to_prop(PointerRNA * ptr, PropertyRNA * prop, void * data, _object * value, const unsigned char * error_prefix) Line 2211	C
pyrna_struct_setattro(BPy_StructRNA * self, _object * pyname, _object * value) Line 4524	C
In `rna_SequenceEditor_update_cache` the `scene->ed` is `NULL`, but is dereferenced when calling `BKE_sequencer_free_imbuf(scene, &ed->seqbase, false);` ``` BKE_sequencer_free_imbuf(Scene * scene, ListBase * seqbase, bool for_render) Line 4307 C rna_SequenceEditor_update_cache(Main * UNUSED_bmain, Scene * scene, PointerRNA * UNUSED_ptr) Line 205 C rna_property_update(bContext * C, Main * bmain, Scene * scene, PointerRNA * ptr, PropertyRNA * prop) Line 2286 C RNA_property_update(bContext * C, PointerRNA * ptr, PropertyRNA * prop) Line 2346 C pyrna_py_to_prop(PointerRNA * ptr, PropertyRNA * prop, void * data, _object * value, const unsigned char * error_prefix) Line 2211 C pyrna_struct_setattro(BPy_StructRNA * self, _object * pyname, _object * value) Line 4524 C ```

This issue was referenced by d5809b39d5

This issue was referenced by d5809b39d5b27ce34d55f00e3d41c4d0409aa6ab

This issue was referenced by f2907b06f4

This issue was referenced by f2907b06f4dacb87b41d464074f21068f27e8204

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2020-07-26 15:04:18 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78999
There is no content yet.